--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Learning react",
   "main": "index.js",
   "scripts": {
-    "build" : "browserify -t [ babelify --presets [ react ] ] src/index.js -o build/app.js",
-    "watch" : "watchify -t [ babelify --presets [ react ] ] src/index.js -o build/app.js"
+    "build": "webpack --progress --colors",
+    "watch": "webpack --progress --colors --watch"
   },
   "repository": {
     "type": "git",
@@ -18,13 +18,13 @@
   },
   "homepage": "https://github.com/JenBerry/jenberry-art-with-react#readme",
   "dependencies": {
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.2.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
   "devDependencies": {
-    "browserify": "^13.0.0",
-    "watchify": "^3.7.0"
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.12.13"
   }
 }
