--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.2",
     "babel-preset-react": "^6.5.0",
-    "bootstrap-loader": "^1.0.8",
-    "bootstrap-sass": "^3.3.6",
+    "bootstrap": "^3.3.6",
+    "bootstrap-webpack": "0.0.5",
     "css-loader": "^0.23.1",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "imports-loader": "^0.6.5",
     "jquery": "^2.2.0",
+    "less": "^2.6.0",
+    "less-loader": "^2.2.2",
     "node-sass": "^3.4.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
