--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --progress --colors",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --content-base ./build"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
     "imports-loader": "^0.6.5",
     "jquery": "^2.2.0",
     "less": "^2.6.0",
