--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Learning react",
   "main": "index.js",
-  "engines":{
+  "engines": {
     "node": "5.6.0"
   },
   "scripts": {
@@ -32,6 +32,7 @@
     "css-loader": "^0.23.1",
     "expect": "^1.14.0",
     "exports-loader": "^0.6.3",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
@@ -40,6 +41,7 @@
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "node-sass": "^3.4.2",
+    "path": "^0.12.7",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-lorem-component": "^0.10.0",
