--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "path": "^0.12.7",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-imageloader": "^2.1.0",
     "react-lorem-component": "^0.10.0",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
