set up server to run webpack dev server if not production

--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "node": "5.6.0"
   },
   "scripts": {
-    "build": "webpack --progress --colors",
-    "postinstall": "webpack",
+    "postinstall": "webpack --progress --colors",
     "start": "node server.js",
-    "startdev": "webpack-dev-server --content-base ./build"
   },
   "repository": {
     "type": "git",
