--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "html-loader": "^0.4.3",
     "imports-loader": "^0.6.5",
     "jquery": "^2.2.0",
+    "json-loader": "^0.5.4",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "node-sass": "^3.4.2",
